<resources>
    <string name="app_name">LostNFound</string>
    <string name="btnNew">Create New Ad</string>
    <string name="btnShowAll">Show All Lost and Found Items</string>
    <string name="postType">Post Type:</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="Description">Description</string>
    <string name="Date">Date</string>
    <string name="Location">Location</string>
    <string name="LostNFound">Lost \'N Found Items</string>
    <string name="Refresh">Show/Update Items</string>
    <string name="delete">DELETE ITEM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>

</resources>